Adicionar ion-tab-bar, criar rotas e estilizar

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,2 +1,6 @@
-// For information on how to create your own theme, please refer to:
-// https://ionicframework.com/docs/theming/
+:root {
+  --ion-color-primary: #0a84ff;
+  --ion-color-secondary: #ff9500;
+
+  --ion-font-family: "Poppins", sans-serif;
+}
