--- a/src/global.scss
+++ b/src/global.scss
@@ -1,14 +1,3 @@
-/*
- * App Global CSS
- * ----------------------------------------------------------------------------
- * Put style rules here that you want to apply globally. These styles are for
- * the entire app and not just one component. Additionally, this file can be
- * used as an entry point to import other CSS/Sass files to be included in the
- * output CSS.
- * For more information on global stylesheets, visit the documentation:
- * https://ionicframework.com/docs/layout/global-stylesheets
- */
-
 /* Core CSS required for Ionic components to work properly */
 @import "@ionic/angular/css/core.css";
 
@@ -18,20 +7,56 @@
 @import "@ionic/angular/css/typography.css";
 @import "@ionic/angular/css/display.css";
 
-/* Optional CSS utils that can be commented out */
+/* Optional CSS utils */
 @import "@ionic/angular/css/padding.css";
 @import "@ionic/angular/css/float-elements.css";
 @import "@ionic/angular/css/text-alignment.css";
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
 
-/**
- * Ionic Dark Mode
- * -----------------------------------------------------
- * For more info, please see:
- * https://ionicframework.com/docs/theming/dark-mode
- */
-
-/* @import "@ionic/angular/css/palettes/dark.always.css"; */
-/* @import "@ionic/angular/css/palettes/dark.class.css"; */
+/* Dark mode handling (pode manter ou remover) */
 @import '@ionic/angular/css/palettes/dark.system.css';
+
+body {
+  font-family: "Poppins", sans-serif;
+}
+
+ion-title{
+    text-align: center;
+}
+
+ion-content {
+  --background: #610159;
+}
+
+/* pinta todos os toolbars/headers do app */
+ion-toolbar,
+ion-header {
+  /* cor de fundo do header/toolbar */
+  --background: #02043e;
+  /* cor do texto / ícones dentro do toolbar */
+  --color: #ffffff;
+}
+
+/* força títulos e ícones a ficarem brancos caso alguma regra inline ou tema esteja a sobrescrever */
+ion-toolbar ion-title,
+ion-toolbar .toolbar-title,
+ion-toolbar .title {
+  color: #ffffff !important;
+}
+
+/* garante que botões (ion-buttons / ion-icon dentro do toolbar) também fiquem brancos */
+ion-toolbar ion-button,
+ion-toolbar ion-buttons,
+ion-toolbar ion-icon,
+ion-toolbar .toolbar-button {
+  color: #ffffff !important;
+}
+
+/* se estiver a usar ion-header com translucent, desative/transparencie para evitar o efeito padrão */
+ion-header[translucent],
+ion-toolbar[translucent] {
+  --background: #02043e;
+  --backdrop-opacity: 1;
+}
+
