--- a/src/global.scss
+++ b/src/global.scss
@@ -26,7 +26,7 @@ ion-title{
 }
 
 ion-content {
-  --background: #610159;
+  --background: #BC58FF;
 }
 
 /* pinta todos os toolbars/headers do app */
