Páginas Home e Login atualizados

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,13 +1,19 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>Home</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content class="login-page">
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">home</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <div class="container">
+
+    <ion-img src="assets/logo_sportify.png" class="logo" />
+
+    <h1>Bem vindo ao<br>Sportify</h1>
+
+    <ion-button expand="block" shape="round" class="btn-login">
+      Entrar
+    </ion-button>
+
+    <ion-button expand="block" shape="round" class="btn-register" fill="solid">
+      Registar
+    </ion-button>
+
+  </div>
+
 </ion-content>
