--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -2,16 +2,28 @@
 
   <div class="container">
 
-    <ion-img src="assets/logo_sportify.png" class="logo" />
+    <ion-img src="assets/logo_sportify.png" class="logo"></ion-img>
 
-    <h1>Bem vindo ao<br>Sportify</h1>
+    <h1 class="title">Entrar</h1>
+
+    <ion-input
+      label="Email"
+      label-placement="floating"
+      type="email"
+      class="input-box"
+    ></ion-input>
+
+    <ion-input
+      label="Password"
+      label-placement="floating"
+      type="password"
+      class="input-box"
+    ></ion-input>
+
+    <p class="forgot">Esqueci-me da password</p>
 
     <ion-button expand="block" shape="round" class="btn-login">
       Entrar
-    </ion-button>
-
-    <ion-button expand="block" shape="round" class="btn-register" fill="solid">
-      Registar
     </ion-button>
 
   </div>
