--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -6,11 +6,11 @@
 
     <h1>Bem vindo ao<br>Sportify</h1>
 
-    <ion-button expand="block" shape="round" class="btn-login">
+    <ion-button expand="block" shape="round" class="btn-login" (click)="gotoLogin()">
       Entrar
     </ion-button>
 
-    <ion-button expand="block" shape="round" class="btn-register" fill="solid">
+    <ion-button expand="block" shape="round" class="btn-register" fill="solid" (click)="gotoRegister()">
       Registar
     </ion-button>
 
