--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -20,7 +20,13 @@
       class="input-box"
     ></ion-input>
 
-    <p class="forgot">Esqueci-me da password</p>
+    <ion-button
+      fill="clear"
+      class="forgot"
+      (click)="gotoRecover()">
+      Esqueci-me da password
+    </ion-button>
+
 
     <ion-button expand="block" shape="round" class="btn-login">
       Entrar
