--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -1,13 +1,38 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>register</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content class="register-page">
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">register</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <div class="container">
+
+    <ion-img src="assets/logo_sportify.png" class="logo"></ion-img>
+
+    <h1 class="title">Registar</h1>
+
+    <ion-input
+      label="Email"
+      label-placement="floating"
+      type="email"
+      class="input-box"
+    ></ion-input>
+
+    <ion-input
+      label="Insira uma senha"
+      label-placement="floating"
+      type="password"
+      class="input-box"
+    ></ion-input>
+
+    
+    <ion-input
+      label="Confirme sua senha"
+      label-placement="floating"
+      type="password"
+      class="input-box"
+    ></ion-input>
+
+
+    <ion-button expand="block" shape="round" class="btn-registar" fill="solid">
+      Registar
+    </ion-button>
+
+  </div>
+
 </ion-content>
