--- a/src/global.scss
+++ b/src/global.scss
@@ -33,9 +33,9 @@ ion-content {
 ion-toolbar,
 ion-header {
   /* cor de fundo do header/toolbar */
-  --background: #02043e;
+  --background: #BC58FF;
   /* cor do texto / ícones dentro do toolbar */
-  --color: #ffffff;
+  --color: #000000;
 }
 
 /* força títulos e ícones a ficarem brancos caso alguma regra inline ou tema esteja a sobrescrever */
