--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -1,8 +1,8 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="home">
-      <ion-icon name="home-outline"></ion-icon>
-      Home
+    <ion-tab-button tab="statistic">
+      <ion-icon name="statistic-outline"></ion-icon>
+      Statistcs
     </ion-tab-button>
 
     <ion-tab-button tab="profile">
