--- a/src/app/pages/tabs/tabs.page.scss
+++ b/src/app/pages/tabs/tabs.page.scss
@@ -1,7 +1,7 @@
 ion-tab-bar {
-  --background: #02043e;
+  --background: #BC58FF;
 }
 ion-tab-button {
-  --color: #ffffff;
+  --color: #000000;
   --color-selected: #ffcc00;
 }
