--- a/src/app/pages/settings/settings.page.html
+++ b/src/app/pages/settings/settings.page.html
@@ -1,13 +1,86 @@
-<ion-header [translucent]="true">
+<ion-header translucent>
   <ion-toolbar>
-    <ion-title>Settings</ion-title>
+    <ion-title>Definições</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">settings</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content fullscreen>
+
+  <!-- APARÊNCIA -->
+  <ion-list inset>
+    <ion-list-header>Aparência</ion-list-header>
+
+    <ion-item>
+      <ion-icon name="moon" slot="start"></ion-icon>
+      <ion-label>Modo escuro</ion-label>
+      <ion-toggle slot="end" [(ngModel)]="darkMode"
+                  (ionChange)="toggleDarkMode($event)">
+      </ion-toggle>
+    </ion-item>
+
+    <ion-item>
+      <ion-icon name="text" slot="start"></ion-icon>
+      <ion-label>Tamanho da fonte</ion-label>
+      <ion-select slot="end" placeholder="Normal">
+        <ion-select-option value="small">Pequeno</ion-select-option>
+        <ion-select-option value="normal">Normal</ion-select-option>
+        <ion-select-option value="large">Grande</ion-select-option>
+      </ion-select>
+    </ion-item>
+  </ion-list>
+
+  <!-- IDIOMA -->
+  <ion-list inset>
+    <ion-list-header>Idioma</ion-list-header>
+
+    <ion-item>
+      <ion-icon name="language" slot="start"></ion-icon>
+      <ion-label>Idioma</ion-label>
+      <ion-select slot="end" [(ngModel)]="language">
+        <ion-select-option value="pt">Português</ion-select-option>
+        <ion-select-option value="en">English</ion-select-option>
+      </ion-select>
+    </ion-item>
+  </ion-list>
+
+  <!-- NOTIFICAÇÕES -->
+  <ion-list inset>
+    <ion-list-header>Notificações</ion-list-header>
+
+    <ion-item>
+      <ion-icon name="notifications" slot="start"></ion-icon>
+      <ion-label>Lembretes de treino</ion-label>
+      <ion-toggle slot="end"></ion-toggle>
+    </ion-item>
+
+    <ion-item>
+      <ion-icon name="calendar" slot="start"></ion-icon>
+      <ion-label>Resumo semanal</ion-label>
+      <ion-toggle slot="end"></ion-toggle>
+    </ion-item>
+  </ion-list>
+
+  <!-- CONTA -->
+  <ion-list inset>
+    <ion-list-header>Conta</ion-list-header>
+
+    <ion-item button>
+      <ion-icon name="lock-closed" slot="start"></ion-icon>
+      <ion-label>Alterar palavra-passe</ion-label>
+    </ion-item>
+
+    <ion-item button>
+      <ion-icon name="mail" slot="start"></ion-icon>
+      <ion-label>Alterar email</ion-label>
+    </ion-item>
+  </ion-list>
+
+  <!-- LOGOUT -->
+  <ion-list inset>
+    <ion-item button color="danger" (click)="logout()">
+      <ion-icon name="log-out" slot="start"></ion-icon>
+      <ion-label>Terminar sessão</ion-label>
+    </ion-item>
+  </ion-list>
+
 </ion-content>
