--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -1,69 +1,54 @@
-<ion-header [translucent]="true">
+<ion-header translucent="true">
   <ion-toolbar>
-    <ion-title>Perfil</ion-title>
+    <ion-title></ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true" class="profile-content">
+<ion-content fullscreen class="profile-content">
 
-  <!-- Cabeçalho do perfil -->
-  <div class="profile-header ion-text-center">
-    <ion-avatar class="profile-avatar">
-      <img src="assets/avatar.png" />
-    </ion-avatar>
-
-    <h2>João Silva</h2>
-    <p>joao@email.com</p>
-
-    <ion-button fill="outline" size="small" class="edit-btn">
-      Editar perfil
-    </ion-button>
+  <!-- Saudação -->
+  <div class="profile-greeting">
+    <h1>Olá, <span>João</span></h1>
+    <p>Aqui está o teu resumo semanal</p>
   </div>
 
-  <!-- Estatísticas -->
-  <ion-grid class="stats">
-    <ion-row>
-      <ion-col size="6">
-        <ion-card>
-          <ion-card-content>
-            <h3>12</h3>
-            <p>Atividades</p>
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
+  <!-- Estatísticas principais -->
+ <div class="profile-stats">
+  <div class="stat-card">
+    <img src="assets/fire.png" class="stat-icon" />
+    <h2>1.200</h2>
+    <p>Total de calorias</p>
+  </div>
 
-      <ion-col size="6">
-        <ion-card>
-          <ion-card-content>
-            <h3>8h</h3>
-            <p>Tempo</p>
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+  <div class="stat-card">
+    <img src="assets/watch.png" class="stat-icon" />
+    <h2>12h 45m</h2>
+    <p>Tempo Total</p>
+  </div>
+</div>
 
-  <!-- Informações -->
-  <ion-list inset>
-    <ion-item>
-      <ion-label>Idade</ion-label>
-      <ion-note slot="end">25</ion-note>
-    </ion-item>
 
-    <ion-item>
-      <ion-label>Peso</ion-label>
-      <ion-note slot="end">70 kg</ion-note>
-    </ion-item>
+  <!-- Atividade mais frequente -->
+  <div class="profile-activity">
+  <img src="assets/running.png" class="activity-icon" />
+  <div class="corrida">
+    <h2>Corrida</h2>
+    <p>Atividade mais frequente</p>
+  </div>
+</div>
 
-    <ion-item>
-      <ion-label>Altura</ion-label>
-      <ion-note slot="end">175 cm</ion-note>
-    </ion-item>
-  </ion-list>
 
-  <!-- Logout -->
-  <ion-button expand="block" color="danger" fill="outline" class="logout-btn">
-    Terminar sessão
+  <!-- Gráfico semanal -->
+  <div class="profile-chart">
+    <p class="chart-title">Atividades da semana</p>
+    <div class="chart-placeholder">
+      Gráfico semanal
+    </div>
+  </div>
+
+  <!-- Botão principal -->
+  <ion-button expand="block" class="create-activity-btn">
+    Criar Atividade
   </ion-button>
 
 </ion-content>
