Criação das Páginas do Desing no figma

--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -41,9 +41,10 @@
   <!-- Gráfico semanal -->
   <div class="profile-chart">
     <p class="chart-title">Atividades da semana</p>
-    <div class="chart-placeholder">
-      Gráfico semanal
-    </div>
+    <div class="chart-container">
+  <canvas id="weeklyChart"></canvas>
+</div>
+
   </div>
 
   <!-- Botão principal -->
