Criação das Páginas do Figma

--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -48,7 +48,7 @@
   </div>
 
   <!-- Botão principal -->
-  <ion-button expand="block" class="create-activity-btn">
+  <ion-button expand="block" class="create-activity-button" [routerLink]="['/criar-atividade']">
     Criar Atividade
   </ion-button>
 
