--- a/src/app/pages/historico/historico.page.html
+++ b/src/app/pages/historico/historico.page.html
@@ -46,5 +46,21 @@
     </div>
   </div>
 
+    <div class="activity-card">
+    <div class="activity-header">
+      <span class="icon">🏋️</span>
+      <div>
+        <h3>Ginásio</h3>
+        <p>18 de abril de 2025</p>
+      </div>
+      <span class="fav">♡</span>
+    </div>
+
+    <div class="activity-info">
+      <span>⏱ 1h 10min</span>
+      <span class="tag high">Moderada</span>
+    </div>
+  </div>
+
 </ion-content>
 
