--- a/src/app/pages/favoritos/favoritos.page.html
+++ b/src/app/pages/favoritos/favoritos.page.html
@@ -69,8 +69,8 @@
 
   <!-- Botões -->
   <div class="actions">
-    <ion-button fill="outline" color="medium">Eliminar</ion-button>
-    <ion-button color="primary">Editar</ion-button>
+    <ion-button fill="outline" color="medium" class="eliminar">Eliminar</ion-button>
+    <ion-button color="primary" class="editar">Editar</ion-button>
   </div>
 
 </ion-content>
