--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -17,11 +17,11 @@
       <p>Ativo desde Março 2024</p>
 
       <ion-button
-  fill="clear"
-  size="small"
-  routerLink="/personalizacao">
-   Editar Personalização
-</ion-button>
+        fill="clear"
+        size="small"
+        (click)="gotoPersonalizacao()">
+        Editar Personalização
+      </ion-button>
 
     </div>
   </div>
