--- a/src/app/pages/personalizacao/personalizacao.page.html
+++ b/src/app/pages/personalizacao/personalizacao.page.html
@@ -69,8 +69,9 @@
     </div>
   </div>
 
-  <ion-button expand="block" class="save-btn" (click)="guardar()">
-    Guardar preferências
-  </ion-button>
+ <ion-button expand="block" class="save-btn" routerLink="/profile">
+  Guardar
+</ion-button>
+
 
 </ion-content>
