--- a/src/app/pages/statistic/statistic.page.html
+++ b/src/app/pages/statistic/statistic.page.html
@@ -29,6 +29,7 @@
 
   <!-- Atividade mais frequente -->
   <div class="profile-activity">
+    <img src="assets/running.png" class="activity-icon" />
     <div class="corrida">
       <h2>{{ atividadeMaisFrequente }}</h2>
       <p>Atividade mais frequente</p>
