--- a/src/app/pages/menu/menu.page.html
+++ b/src/app/pages/menu/menu.page.html
@@ -8,53 +8,16 @@
 
   <ion-list class="menu-list">
 
-    <ion-item class="menu-item" button routerLink="/historico">
-      <ion-icon name="time-outline" slot="start"></ion-icon>
-      <ion-label>Histórico de Atividades</ion-label>
-      <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
-    </ion-item>
+<ion-item button routerLink="/tabs/historico">Histórico</ion-item>
+<ion-item button routerLink="/tabs/favoritos">Favoritos</ion-item>
+<ion-item button routerLink="/tabs/objetivos">Objetivos</ion-item>
+<ion-item button routerLink="/tabs/mapa-atividade">Mapa da Atividade</ion-item>
+<ion-item button routerLink="/tabs/estado-fisico">Estado Físico</ion-item>
+<ion-item button routerLink="/tabs/evolucao">Evolução</ion-item>
+<ion-item button routerLink="/tabs/lembretes">Lembretes</ion-item>
+<ion-item button routerLink="/tabs/atividade-sugerida">Atividade sugerida</ion-item>
 
-    <ion-item class="menu-item" button routerLink="/favoritos">
-      <ion-icon name="star-outline" slot="start"></ion-icon>
-      <ion-label>Favoritos</ion-label>
-      <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
-    </ion-item>
 
-    <ion-item class="menu-item" button routerLink="/objetivos">
-      <ion-icon name="trophy-outline" slot="start"></ion-icon>
-      <ion-label>Objetivos e Metas</ion-label>
-      <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
-    </ion-item>
-
-    <ion-item class="menu-item" button routerLink="/mapa-atividade">
-      <ion-icon name="map-outline" slot="start"></ion-icon>
-      <ion-label>Mapa da Atividade</ion-label>
-      <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
-    </ion-item>
-
-    <ion-item class="menu-item" button routerLink="/estado-fisico">
-      <ion-icon name="heart-outline" slot="start"></ion-icon>
-      <ion-label>Estado Físico</ion-label>
-      <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
-    </ion-item>
-
-    <ion-item class="menu-item" button routerLink="/evolucao">
-      <ion-icon name="stats-chart-outline" slot="start"></ion-icon>
-      <ion-label>Evolução</ion-label>
-      <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
-    </ion-item>
-
-    <ion-item class="menu-item" button routerLink="/lembretes">
-      <ion-icon name="notifications-outline" slot="start"></ion-icon>
-      <ion-label>Lembretes</ion-label>
-      <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
-    </ion-item>
-
-    <ion-item class="menu-item" button routerLink="/atividade-sugerida">
-      <ion-icon name="sparkles-outline" slot="start"></ion-icon>
-      <ion-label>Atividade sugerida</ion-label>
-      <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
-    </ion-item>
 
   </ion-list>
 
