--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -1,18 +1,31 @@
 <ion-tabs>
+
+  <ion-router-outlet></ion-router-outlet>
+
   <ion-tab-bar slot="bottom">
+
     <ion-tab-button tab="statistic">
-      <ion-icon name="statistic-outline"></ion-icon>
-      Statistcs
+      <ion-icon name="stats-chart-outline"></ion-icon>
+      <ion-label>Statistics</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="menu">
+      <ion-icon name="menu-outline"></ion-icon>
+      <ion-label>Menu</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="profile">
       <ion-icon name="person-outline"></ion-icon>
-      Profile
+      <ion-label>Profile</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="settings">
       <ion-icon name="settings-outline"></ion-icon>
-      Settings
+      <ion-label>Settings</ion-label>
     </ion-tab-button>
+
   </ion-tab-bar>
+
 </ion-tabs>
+
+
